--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,14 @@
 language: perl
-perl:
-  - "5.24"
-  - "5.20"
-  - "5.16"
-  - "5.10"
+matrix:
+  include:
+    - perl: "5.24"
+      dist: xenial
+    - perl: "5.20"
+      dist: trusty
+    - perl: "5.16"
+      dist: trusty
+    - perl: "5.10"
+      dist: trusty
 env:
   - "HARNESS_OPTIONS=j9"
 install:
